<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cat1"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_cat_male" />
    <item
        android:id="@+id/action_cat2"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_cat_female" />
    <item
        android:id="@+id/action_cat3"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_cat_update" />
    <item
        android:id="@+id/action_cat4"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_kitten" />
</menu>
