<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/clear"
        android:title="@string/clear"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/replication"
        android:title="@string/replication"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/synchronization_settings"
        android:title="@string/SyncSettings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/attention"
        android:title="@string/attention"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_add"
        android:title="@string/attention"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_refresh"
        />

</menu>
